Frontend/src/components/header/Header.module.css
header {
	position: fixed;
	top: 0;
	z-index: 5;
	padding: 1rem 0 0;
	display: flex;
	flex-direction: row;
	justify-content: start;
	height: 100px;
	width: 100vw;
	pointer-events: none;

	.clickable {
		pointer-events: auto;
	}

	a {
		width: fit-content;
	}

	.headerLogo {
		position: relative;
		z-index: 3;
		min-height: 60px;
		height: 100%;
		width: auto;
		animation: bounce-in 0.3s ease-in-out forwards;
	}
}

.headerLogo.hide {
	animation: bounce-out 0.3s ease-in-out forwards;
	opacity: 0;
}

@keyframes bounce-in {
	0% {
		opacity: 0;
		transform: translateY(-120px) scale(0.9);
	}

	70% {
		opacity: 1;
		transform: translateY(20px) scale(1);
	}

	85% {
		transform: translateY(-10px);
	}

	100% {
		opacity: 1;
		transform: translateY(0) scale(1);
	}
}

@keyframes bounce-out {
	0% {
		opacity: 1;
		transform: translateY(0) scale(1);
	}

	15% {
		transform: translateY(-10px);
	}

	30% {
		opacity: 1;
		transform: translateY(20px) scale(1);
	}

	100% {
		opacity: 0;
		transform: translateY(-120px) scale(0.9);
	}
}

.navItem {
	background-color: unset;
	text-decoration: none;
	color: var(--txt-shift-primary);
}

.navItem.active {
	color: var(--hl-primary);
}

#hamburgerNav {
	display: none;
}

body:has(#hamburgerNav:checked) {
	overflow: hidden;

	.headerLogo.hide {
		animation: bounce-in 0.3s ease-in-out forwards;
	}
}

/* lines */
.flexCtx {
	display: flex;
	flex-direction: column;
	align-items: end;
	justify-content: center;

	aspect-ratio: 1 / 1;
	width: 2rem;
	background-color: var(--bg-shift-alt);
	padding: 0.5rem;
	border-radius: 8px;
}

.line {
	width: 2rem;
	height: 5px;
	background-color: var(--txt-shift-secondary);
	transition: all 0.2s ease;
	border-radius: 0.2rem;
}

.l2 {
	margin: 0.4rem 0;
	width: 60%;
}

#hamburgerNav + label {
	cursor: pointer;
	position: relative;
	display: block;
	z-index: 2;
}

#hamburgerNav:checked + label > .flexCtx > .l1 {
	transform: translate(0, 0.85rem) rotate(45deg);
	margin: auto;
}

#hamburgerNav:checked + label > .flexCtx > .l2 {
	opacity: 0;
	transform: rotate(45deg);
}

#hamburgerNav:checked + label > .flexCtx > .l3 {
	transform: translate(0, -0.75rem) rotate(-45deg);
	margin: auto;
}

.navList {
	font-size: 32px;
	display: grid;
	grid-template-rows: auto 1fr auto;
	min-height: 100dvh;
	background-image: url(/assets/wallTextureWeb2.png);
	background-color: var(--bg-shift-primary);
	background-size: cover;

	.orientationSwap {
		list-style: none;

		li {
			a:hover {
				color: var(--txt-special);
			}
		}
	}

	ul {
		padding-left: 0;
	}

	.navLogo {
		grid-row: 1/2;
		display: flex;
		margin-top: 5dvh;

		img {
			margin: 0 auto;
			height: var(--shift-logo-height);
			width: auto;
		}
	}

	.navLinks {
		grid-row: 2/3;
		margin-top: -8dvh;
		margin-bottom: auto;
	}

	.navLinks ul {
		height: 30dvh;
		padding-left: 0;
		display: flex;
		flex-direction: column;
		justify-content: space-evenly;

		li {
			list-style: none;
			text-align: center;
		}
	}

	.navFooter {
		grid-row: 3/4;
		align-self: end;
		width: 85vw;
		margin: 0 auto 1rem;
		font-weight: 500;

		span {
			font-weight: bold;
		}

		p {
			text-align: center;
			font-size: 0.9rem;
			margin: 0 auto 1rem;

			span {
				font-size: inherit;
				color: var(--hl-primary);
			}
		}

		.socialLinks {
			margin: 0 auto;
			width: 85vw;
			display: flex;
			flex-direction: row;
			justify-content: space-between;
			align-items: end;
		}
	}
}

.navList::before {
	display: block;
	position: absolute;
	inset: 0;
	content: "";
	background-image: url(/assets/iconsOverlay.svg);
	background-size: 9000px;
	min-height: 100dvh;
	z-index: -1;
	background-color: color-mix(black, transparent 75%);
}

ul:has(+ #hamburgerNav) {
	display: grid;
	position: absolute;
	width: 100vw;
	height: 100dvh;
	left: 0;
	top: 0;
	margin: 0;
	z-index: 1;
	overflow: hidden;
	padding: 0;
	align-content: center;
	max-width: unset;
	transform: translateY(-100%);
	transition:
		transform 0.3s ease-in-out,
		opacity 0s;
	transition-delay: 0s, 0.3s;
	list-style-type: none;
	opacity: 0;
}

ul:has(+ #hamburgerNav) li {
	text-transform: uppercase;
	width: 100%;
}

ul:has(+ #hamburgerNav) a {
	text-decoration: none;
}

ul:has(+ #hamburgerNav) .active {
	background-color: unset;
}

ul:has(+ #hamburgerNav:checked) {
	transform: translateY(0);
	opacity: 1;
	transition-delay: 0s, 0s;
}

@media screen and (min-width: 1024px) {
	.navList {
		.orientationSwap {
			display: flex;
			flex-direction: row;

			li {
				font-size: 60px;

				img {
					max-width: 40vw;
				}
			}
		}

		.navLogo {
			margin-top: 15vh;
		}

		.navLinks {
			margin-top: 30vh;
		}

		.navFooter {
			display: flex;
			flex-direction: row;
			max-width: 85vw;
			margin: 0 auto 1rem;

			* {
				max-width: 35vw;
				justify-content: space-between;
			}

			p {
				margin-left: 0;
				text-align: left;
				font-size: 18px;
			}

			.socialLinks {
				margin-right: 0;
				max-width: 33dvw;
			}
		}
	}
}

